--- a/packages/CarActivityResolver/AndroidManifest.xml
+++ b/packages/CarActivityResolver/AndroidManifest.xml
@@ -34,6 +34,9 @@
     <!-- To change the preferred activity. -->
     <uses-permission android:name="android.permission.SET_PREFERRED_APPLICATIONS" />
 
+    <!-- Prevent overlay. -->
+    <uses-permission android:name="android.permission.HIDE_NON_SYSTEM_OVERLAY_WINDOWS" />
+
     <application android:label="@string/app_name">
 
         <activity
