Added permission requirement to OEM service implementation
- Also added a CTS test to check it

Bug: 245982224
Test: atest OemCarServiceImplTest
Change-Id: I4fd32d41780033a52167ee7d5368efb8ab6f58d7
Merged-In: I4fd32d41780033a52167ee7d5368efb8ab6f58d7
(cherry pick from commit 57b987d52a1bc64e35642626125a8256705510e7)

--- a/tests/OemCarServiceTestApp/AndroidManifest.xml
+++ b/tests/OemCarServiceTestApp/AndroidManifest.xml
@@ -20,6 +20,7 @@
     <application>
         <service android:name="com.android.car.oemcarservice.testapp.OemCarServiceImpl"
                  android:directBootAware="true"
+                 android:permission="android.car.permission.BIND_OEM_CAR_SERVICE"
                  android:exported="true">
         </service>
     </application>
